# luminous-nix

./: .coverage.luminous.1122161.XzCdURux  .coverage.luminous.1122165.XCRNWjrx  .coverage.luminous.1122169.XqAtLRvx  .coverage.luminous.1122171.XNEIzpGx  .coverage.luminous.1122173.XbzEGrLx  .dockerignore  .envrc  .gitconfig  .gitignore  .gitlint  .improvement-progress  .pre-commit-config-quick.yaml  .pre-commit-config.yaml  .secrets.baseline  ALIAS_FEATURE_DESIGN.md  ANNOUNCEMENT-v0.2.0.md  ARCHITECTURE_ALIGNMENT_SUMMARY.md  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_CRITICAL_ANALYSIS.md  ARCHITECTURE_DECISION.md  ARCHIVE_LOG.md  ARCHIVE_STRATEGY.md  BACKEND_REFACTOR_REPORT.md  BUILDING_IN_PUBLIC_STRATEGY.md  CHANGELOG.md  CLAUDE.md  CLAUDE_SETUP_INSTRUCTIONS.md  CLEANUP_PLAN.md  CLI-FIXES-COMPLETE.md  CLI-WORKING-EXAMPLE.md  CLI_STATUS_REPORT.md  CODE_OF_CONDUCT.md  COMMUNITY_ANNOUNCEMENT.md  COMPLETE_ARCHITECTURE_ALIGNMENT.md  COMPLETE_SUCCESS.md  CONFIG_PERSISTENCE_SUMMARY.md  CONSOLIDATION_SUMMARY.md  CONTRIBUTING.md  COVERAGE_IMPROVEMENT_REPORT.md  CURRENT_STATE_ANALYSIS.md  (+383 more)
.archive-2025-08-10/: ARCHIVE_LOG.md
.archive-2025-08-12/: ARCHIVE_LOG.md
.claude/: ACCESSIBILITY_REQUIREMENTS.md  CLAUDE_PROJECT_CONTEXT.md  CLOUD_AI_CONSIDERATIONS.md  CLOUD_AI_STRATEGY.md  CONTEXT.md  DEVELOPMENT_PHILOSOPHY.md  DOCUMENTATION_UPDATE_SUMMARY.md  HOW_TO_ADD_DEPENDENCIES.md  IMPLEMENTATION_PRIORITIES.md  INDEX.md  LAYERED_REALITY_POLICY.md  MEMORY_UPDATE_2025_07_23.md  NATURAL_LANGUAGE_FIRST_CLARIFICATION.md  NATURAL_LANGUAGE_FIRST_PRINCIPLE.md  NIXOS_INTEGRATION_PATTERNS.md  NIX_DEVELOPMENT_RULES.md  NLP_INTENT_PATTERNS.md  OPERATIONAL_INTELLIGENCE.md  PROJECT_CONTEXT.md  PROJECT_STATUS.md  SERVICE_PORTS_REGISTRY.md  TAURI_IMPLEMENTATION_APPROACH.md  TECHNICAL_DECISIONS.md  TECH_STACK_DECISION.md  TESTING_PRINCIPLES.md  TEXT_FOUNDATION_UPDATE_SUMMARY.md  VISION_ALIGNMENT.md  VISUAL_ELEMENTS_PHILOSOPHY.md  session-notes-2025-08-15.md  session-notes.md
.github/: CODE_OF_CONDUCT.md  FUNDING.yml  GITHUB_PUSH_CHECKLIST.md  PULL_REQUEST_TEMPLATE.md  badges.json  cliff.toml  dependabot.yml  pull_request_template.md  release-drafter.yml
.standards/: CODE_REVIEW_CHECKLIST.md  GIT_WORKFLOW.md  PYTHON_STANDARDS.md  SECURITY_STANDARDS.md  TESTING_STANDARDS.md
announcements/: discord.md  reddit.md  twitter.md
archive/: requirements-research.txt
benchmarks/: benchmark_suite.py  performance_suite.py  test_healing_performance.py  visualize_performance.py
config/: Dockerfile  Dockerfile.dev  Dockerfile.tauri  Makefile  backend.conf  config.example.yaml  docker-compose.yml  feature-flags.yaml  features.yaml  llm-config.nix  nginx.conf  power-user-models.nix  sacred-council-models.yaml  security_config.yaml  supervisord.conf  tauri.conf.template.json  trinity-models-unified.yaml  trinity-models-v2.yaml  v1.0.yaml  v1_integration_test_results.json
configs/: steam-deck-luminous.nix
dashboard/: package.json  server.js  start-dashboard.sh
demo/: run_demo.py  start_demo.sh
demos/: 1_natural_language.cast  1_natural_language.sh  2_smart_search.sh  3_generation_rollback.sh  4_tui_showcase.sh  4_tui_showcase_interactive.md  5_voice_ready.sh  README_DEMOS.md  convert_to_gifs.sh  demo_enhanced_error_handling.py
docs/: ADAPTIVE_FEATURES_GUIDE.md  ADVANCED_CROSS_REFERENCE_NETWORKS.md  ADVANCED_SEARCH_AND_DISCOVERY.md  API-VERSIONING-STANDARDS.md  ARCHITECTURE-VISUAL.md  BACKUP_RESTORE_COMPLETE.md  CI-CD-GUIDE.md  CLAUDE_CODE_SETUP.md  CLEANUP_READY.md  CLEANUP_REPORT.json  CLEANUP_SUMMARY.md  COMPLIANCE_REPORT.json  CONFIGURATION_SYSTEM.md  CONTEXTUAL_QUICK_REFERENCE_INTEGRATION.md  CONTRIBUTING.md  CONTRIBUTING_V1.md  CONTRIBUTORS_PARABLE.md  DASHBOARD_GUIDE.md  DBUS_INTEGRATION_RECOMMENDATION.md  DEEPSEEK_R1_NOTES.md  DEMO_VIDEO_SCRIPT.md  DEPENDENCIES_AND_TOOLS_CHECKLIST.md  DEPENDENCIES_INSTALLATION_SUMMARY.md  DEVICE_UX_STRATEGY.md  DOCUMENTATION-STANDARDS.md  DOCUMENTATION-STATUS.md  DOCUMENTATION_CLEANUP_PLAN.md  DOCUMENTATION_PERFECTION_ACHIEVED.md  DOCUMENTATION_REORGANIZATION_COMPLETE.md  DOCUMENTATION_REORGANIZATION_PLAN.md  DUAL_BOOT_GUIDE.md  DYNAMIC_EXECUTIVE_SUMMARY.md  FEATURE_COMPARISON.md  FILE_MONITORING_INTEGRATION_COMPLETE.md  FINAL-CLEANUP-SUMMARY.md  FZF_INTEGRATION_COMPLETE.md  FZF_INTEGRATION_PLAN.md  GIT-STANDARDS.md  GUI_MODULAR_ARCHITECTURE.md  HARDWARE_EXPANSION_STRATEGY.md  (+83 more)
examples/: 01-quick-start.md  02-migration-guide.md  DEMO.sh  README.md  demo-learning.sh  demo-nix-humanity.sh  demo_advanced_features.py  demo_all_core_features.py  demo_both_features.py  demo_config_generation.py  demo_config_system.py  demo_consciousness_orb.py  demo_enhanced_cli.py  demo_error_intelligence.py  demo_error_intelligence_tui.py  demo_error_translation.py  demo_flake_management.py  demo_full_tui.py  demo_home_manager.py  demo_native_performance.py  demo_tui.py  demo_tui_native.py  demo_voice.py  demo_voice_complete.py  demo_voice_fixed.py  demo_voice_realtime.py  demo_voice_simple.py  demo_voice_with_nix.py  demo_voice_working.py  demo_voice_working_final.py  demo_voice_working_standalone.py  flake-voice-config.nix  nixos-voice-config.nix
frontends/: __init__.py
gui/: api_server.py  index.html
gui-tauri/: index.html  setup.sh  vite.config.ts
gui-tauri/src-tauri/: Cargo.toml  tauri.conf.json
gui-tauri/src-tauri/src/: main.rs
launch/: HACKER_NEWS_POST.md  LAUNCH_COORDINATION.md  REDDIT_POST.md  TECHNICAL_ARTICLE.md  TWITTER_THREAD.md
learning/: INDEX.md
metrics/: import_analysis.json  performance_showcase.json  performance_validation.json
migrations/: env.py
modelfiles/: Modelfile.luminous-nix
models/: current_coder.txt  current_empathy.txt  current_expert.txt  current_quick.txt
nixos/: README.md  example-configuration.nix
performance_reports/: regression_20250812_081029.json  regression_20250812_082824.json  regression_20250812_082955.json  regression_20250812_083123.json  regression_20250812_083253.json
poetry2nix-test/: flake.nix  pyproject.toml
release/: CHANGELOG.md
results/: FEEDBACK_RESULTS.md  TEST_EXECUTE_FLAG_RESULTS.md
scripts/: INDEX.md  (+326 more)
(+2788 files in other folders)
